Implemented proper Moose export support
This should address resolve of keyword-like sub names exported by Moose

#2352 #2238